Library/AXL(Library)/C, C++/AXDev.h

// Transmit instructions of each slave of each board.
DWORD   __stdcall AxlSetSendBoardEachCommand(long lBoardNo, DWORD dwCommand, DWORD* dwpSendData, DWORD dwLength);
// Transmit instructions to each board.
DWORD    __stdcall AxlSetSendBoardCommand(long lBoardNo, DWORD dwCommand, DWORD* dwpSendData, DWORD dwLength);
// Verify the response of each board.
DWORD    __stdcall AxlGetResponseBoardCommand(long lBoardNo, DWORD* dwpReadData);
// Reading firmware version function of slaves in network type master board.
// Declare with array of ucaFirmwareVersion unsigned char type(Size : 4 or more)
DWORD    __stdcall AxmInfoGetFirmwareVersion(long lAxisNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxaInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxdInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxcInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
//======== Only for PCI-R1604-MLII ===========================================================================
// Set the value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
// Default value : Max
// Setting value Range : 0 ~ 4000H
// If it is set to 4000H or higher, the setting is set higher than that, but the operation is applied to the value of 4000H.
DWORD    __stdcall AxmSetTorqFeedForward(long lAxisNo, DWORD dwTorqFeedForward);
// It is API that read value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
// Default value : Max
DWORD    __stdcall AxmGetTorqFeedForward(long lAxisNo, DWORD* dwpTorqFeedForward);
// It is API that set the value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
// Default value : 0
// Setting value Range : 0 ~ FFFFH
DWORD    __stdcall AxmSetVelocityFeedForward(long lAxisNo, DWORD dwVelocityFeedForward);
// It is API that read value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
DWORD    __stdcall AxmGetVelocityFeedForward(long lAxisNo, DWORD* dwpVelocityFeedForward);
// Set Encoder type.
// Default value : 0(TYPE_INCREMENTAL)
// Setting range : 0 ~ 1
// dwEncoderType : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
DWORD   __stdcall AxmSignalSetEncoderType(long lAxisNo, DWORD dwEncoderType);
// Verify Encoder type.
DWORD   __stdcall AxmSignalGetEncoderType(long lAxisNo, DWORD* dwpEncoderType);
// For updating the slave firmware(only for RTEX-PM).
//DWORD   __stdcall AxmSetSendAxisCommand(long lAxisNo, WORD wCommand, WORD* wpSendData, WORD wLength);

//======== Only for PCI-R1604-RTEX, RTEX-PM==============================================================
// When Input Universal Input 2, 3, Set Jog move velocity
// Set only once execute after all drive setting (Ex, PulseOutMethod, MoveUnitPerPulse etc..)
DWORD    __stdcall AxmMotSetUserMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel);
// When Input Universal Input 2, 3, Set Jog move usage
// Setting value :  0(DISABLE), 1(ENABLE)
DWORD    __stdcall AxmMotSetUserMotionUsage(long lAxisNo, DWORD dwUsage);
// Set Load/UnLoad Position to Automatically move use MPGP Input
DWORD    __stdcall  AxmMotSetUserPosMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel, double dLoadPos, double dUnLoadPos, DWORD dwFilter, DWORD dwDelay);
// Set Usage Load/UnLoad Position to Automatically move use MPGP Input
// Setting value :  0(DISABLE), 1(Position function A), 2(Position function B)
DWORD    __stdcall  AxmMotSetUserPosMotionUsage(long lAxisNo, DWORD dwUsage);
//========================================================================================================

//======== SIO-CN2CH, Only for absolute position trigger module(B0) =======================================
// The API of writing memory data.
DWORD  __stdcall AxcKeWriteRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD dwData);
// The API of reading memory data.
DWORD  __stdcall AxcKeReadRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD* dwpData);
// Memory initialization API.
DWORD  __stdcall AxcKeResetRamDataAll(long lModuleNo, DWORD dwData);
// Trigger timeout setting API.
DWORD  __stdcall AxcTriggerSetTimeout(long lChannelNo, DWORD dwTimeout);
// Trigger timeout checking API.
DWORD  __stdcall AxcTriggerGetTimeout(long lChannelNo, DWORD* dwpTimeout);
// Trigger Waiting State checking API.
DWORD  __stdcall AxcStatusGetWaitState(long lChannelNo, DWORD* dwpState);
// Trigger Waiting State setting API.
DWORD  __stdcall AxcStatusSetWaitState(long lChannelNo, DWORD dwState);
// Write command to designated channel.
DWORD  __stdcall AxcKeSetCommandData32(long lChannelNo, DWORD dwCommand, DWORD dwData);
// Write command to designated channel.
DWORD  __stdcall AxcKeSetCommandData16(long lChannelNo, DWORD dwCommand, WORD wData);
// Verify register of specified channel.
DWORD  __stdcall AxcKeGetCommandData32(long lChannelNo, DWORD dwCommand, DWORD *dwpData);
// Verify register of specified channel.
DWORD  __stdcall AxcKeGetCommandData16(long lChannelNo, DWORD dwCommand, WORD *wpData);
//========================================================================================================

//======== Only for PCI-N804/N404, Sequence Motion ===========================================================
// Set Axis Information of sequence Motion (min 1axis)
// lSeqMapNo : Sequence Motion Index Point
// lSeqMapSize : Number of axis
// long* LSeqAxesNo : Number of arrary
DWORD   __stdcall AxmSeqSetAxisMap(long lSeqMapNo, long lSeqMapSize, long* lSeqAxesNo);
DWORD   __stdcall AxmSeqGetAxisMap(long lSeqMapNo, long* lSeqMapSize, long* lSeqAxesNo);
// Set Standard(Master)Axis of Sequence Motion.
// By all means Set in AxmSeqSetAxisMap setting axis.
DWORD   __stdcall AxmSeqSetMasterAxisNo(long lSeqMapNo, long lMasterAxisNo);
// Notifies the library node start loading of Sequence Motion.
DWORD   __stdcall AxmSeqBeginNode(long lSeqMapNo);
// Notifies the library node end loading of Sequence Motion.
DWORD   __stdcall AxmSeqEndNode(long lSeqMapNo);
// Start Sequence Motion Move.
DWORD   __stdcall AxmSeqStart(long lSeqMapNo, DWORD dwStartOption);
// Set each profile node Information of Sequence Motion in Library.
// if used 1axis Sequence Motion, Must be Set *dPosition one Array.
DWORD   __stdcall AxmSeqAddNode(long lSeqMapNo, double* dPosition, double dVelocity, double dAcceleration, double dDeceleration, double dNextVelocity);
// Return Node Index number of Sequence Motion.
DWORD   __stdcall AxmSeqGetNodeNum(long lSeqMapNo, long* lCurNodeNo);
// Return All node count of Sequence Motion.
DWORD   __stdcall AxmSeqGetTotalNodeNum(long lSeqMapNo, long* lTotalNodeCnt);
// Return Sequence Motion drive status  of specific SeqMap.
// dwInMotion : 0(Drive end), 1(In drive)
DWORD   __stdcall AxmSeqIsMotion(long lSeqMapNo, DWORD* dwInMotion);
// Clear Sequence Motion Memory.
DWORD   __stdcall AxmSeqWriteClear(long lSeqMapNo);
// Stop sequence motion
// dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP)
DWORD   __stdcall AxmSeqStop(long lSeqMapNo, DWORD dwStopMode);
//========================================================================================================


//======== Only for PCIe-Rxx04-SIIIH ==========================================================================
// (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
//     [0] : Command Position
//     [1] : Actual Position
//     [2] : Actual Velocity
//     [3] : Mechanical Signal
//     [4] : Regeneration load factor(%)
//     [5] : Effective load factor(%)
//     [6] : Peak load factor(%)
//     [7] : Current Feedback
//     [8] : Command Velocity
DWORD   __stdcall AxmStatusSetMon(long lAxisNo, DWORD dwParaNo1, DWORD dwParaNo2, DWORD dwParaNo3, DWORD dwParaNo4, DWORD dwUse);
DWORD   __stdcall AxmStatusGetMon(long lAxisNo, DWORD *dwpParaNo1, DWORD *dwpParaNo2, DWORD *dwpParaNo3, DWORD *dwpParaNo4, DWORD *dwpUse);
DWORD   __stdcall AxmStatusReadMon(long lAxisNo, DWORD *dwpParaNo1, DWORD *dwpParaNo2, DWORD *dwpParaNo3, DWORD *dwpParaNo4, DWORD *dwDataVaild);
DWORD   __stdcall AxmStatusReadMonEx(long lAxisNo, long *lpDataCnt, DWORD *dwpReadData);
//=============================================================================================================

//======== Only for PCI-R32IOEV-RTEX ===========================================================================
// The API for read or write HPI register which allocated as I/O port.
// I/O Registers for HOST interface.
// I/O 00h Host status register (HSR)
// I/O 04h Host-to-DSP control register (HDCR)
// I/O 08h DSP page register (DSPP)
// I/O 0Ch Reserved
DWORD   __stdcall AxlSetIoPort(long lBoardNo, DWORD dwAddr, DWORD dwData);
DWORD   __stdcall AxlGetIoPort(long lBoardNo, DWORD dwAddr, DWORD* dwpData);
//======== Only for PCI-R3200-MLIII ===========================================================================
// Basic information setting API for firmware update of M-III Master board.
DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize, DWORD dwProcTotalStepNo);
// Verify setting value of 'AxlM3SetFWUpdateInit'.
DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize, DWORD *dwProcTotalStepNo);
// M-III Master board firmware update data transfer API.
DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *pdwPacketData, DWORD dwPacketSize);
// Verify setting value of 'AxlM3SetFWUpdateCopy'.
DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, DWORD *dwPacketSize);
// Execute firmware update of M-III Master Board.
DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwFlashBurnStepNo);
// Verifying result of execute firmware update of M-III Master Board.
DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwFlashBurnStepNo, DWORD *dwIsFlashBurnDone);
// The API for setting EEPROM data of M-III Master board.
DWORD   __stdcall AxlM3SetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);
// The API for getting data from EEPROM of M-III Master board.
DWORD   __stdcall AxlM3GetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);